<resources>
    <string name="app_name">Shout</string>
    <string name="goout">Go Out</string>
    <string name="speakout">Speak Out</string>
    <string name="reachout">Reach Out</string>
    <string name="location_search_hint">Find a location…</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="save">Save</string>
    <string name="report_title">Report</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>
    <string name="location_hint">Location</string>
    <string name="details_hint">Details</string>
    <string name="summary_hint">Summary</string>
    <string name="close_button_description">close button</string>
    <string name="logo_description">Application Logo</string>
    <string name="all_tab_label">All</string>
    <string name="stories_tab_title">Stories</string>
    <string name="nearby_reports_header">Reports within 750 feet…</string>
    <string name="report_time_date">%s at %s</string>
    <string name="report_time_today">Today at %s</string>
    <string name="report_time_yesterday">Yesterday at %s</string>
    <string name="placeholder_text">placeholder</string>
    <string name="authentication_failed_error_message">Unable to connect to Shout servers.</string>
    <string name="retry_authentication_attempt_message">Try Again</string>
    <string name="reports_at_location_header">Reports at this location...</string>
    <string name="all_reports">All Reports</string>
    <string name="stories_only">Stories Only</string>
    <string name="filter_title">Filter</string>
    <string name="email">Email</string>
    <string name="directions">Directions</string>
    <string name="website">Website</string>
    <string name="resources_disclaimer">These resources are unaffiliated with Shout or Cornell DTI and it is the user\'s responsibility to properly investigate each resource before use.</string>
    <string name="resources_disclaimer_title">Resources</string>
    <string name="legal_tos">This will contain plenty of legalese once our lawyers finalize it...</string>
    <plurals name="number_of_reports">
        <item quantity="zero">No reports at this location.</item>
        <item quantity="one">%d report at this location.</item>
        <item quantity="other">%d reports at this location.</item>
    </plurals>
    <plurals name="number_of_reports_nearby">
        <item quantity="zero">No reports nearby.</item>
        <item quantity="one">%d report nearby.</item>
        <item quantity="other">%d reports nearby.</item>
    </plurals>
</resources>
