<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">


        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:title="shOUT"
                app:titleTextColor="@color/colorAccent">

                <!-- TODO  <EditText
                      android:id="@+id/search_reports"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:ems="10"
                      android:hint="Search..."
                      android:inputType="textPersonName"
                      android:selectAllOnFocus="true"
                      android:singleLine="true"
                      android:visibility="gone" /> -->

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/logo_description"
                    android:cropToPadding="false"
                    android:scaleType="fitCenter"
                    app:srcCompat="@mipmap/shout_logo" />
            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>


        <LinearLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_collapseMode="pin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom|start"
                android:orientation="vertical">

                <Button
                    android:id="@+id/all_reports_button"
                    style="@style/ButtonTab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/all_tab_label"
                    android:textColor="@color/colorAccent" />

                <LinearLayout
                    android:id="@+id/all_reports_highlight"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/colorAccent"
                    tools:ignore="Orientation" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom|end"
                android:orientation="vertical">

                <Button
                    android:id="@+id/stories_button"
                    style="@style/ButtonTab"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:text="@string/stories_tab_title"
                    android:textColor="@color/colorAccent" />

                <LinearLayout
                    android:id="@+id/stories_highlight"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/colorAccent"
                    android:visibility="invisible"
                    tools:ignore="Orientation" />
            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="top"
            android:background="@drawable/top_appbar_shadow" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="10dp"
                        android:scrollbars="vertical" />
                </RelativeLayout>
            </android.support.v4.widget.NestedScrollView>
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/startReportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_edit"
        app:fabSize="normal"
        tools:ignore="KeyboardInaccessibleWidget" />
</android.support.design.widget.CoordinatorLayout>